fix z-index of profile menu

--- a/frontend/src/app/modules/main-content-container/notifications/notifications.component.sass
+++ b/frontend/src/app/modules/main-content-container/notifications/notifications.component.sass
@@ -30,7 +30,6 @@ $menu-item-width: 300px
     padding: 0 5px
     background-color: $light-gray
     border: 1px solid darken($gray, 15%)
-    z-index: $mini-profile-z-index
     &:hover
         cursor: pointer
     .icon-background
